--- a/templates/air_cargo.html
+++ b/templates/air_cargo.html
@@ -245,7 +245,7 @@
         <p>Contact our cargo specialists to develop a customized transportation solution</p>
       </div>
       <div class="cta-actions">
-        <a href="{% url 'contact-us' %}" class="btn btn-primary">Request Cargo Quote</a>
+        <a onclick="cargoModal.open()" class="btn btn-primary">Request Cargo Quote</a>
         <a href="mailto:cargo@nairobi.jet" class="btn btn-outline">
           <i class="bi bi-envelope"></i> Email Our Team
         </a>
