--- a/templates/aircraft_leasing.html
+++ b/templates/aircraft_leasing.html
@@ -172,7 +172,7 @@
         <p class="cta-text">Our leasing specialists will work with you to develop a customized aircraft solution that meets your operational and financial objectives.</p>
       </div>
       <div class="cta-action">
-        <a href="{% url 'contact-us' %}" class="btn btn-primary">Request Lease Proposal</a>
+        <a onclick="leasingModal.open()" class="btn btn-primary">Request Lease Proposal</a>
         <a href="tel:+254700000000" class="btn btn-secondary">
           <i class="bi bi-telephone"></i> Call Our Leasing Team
         </a>
