--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,7 @@
          
 
             <li>
-              <a href="{% url 'services'%}" class="navbar-link" data-nav-link>Group charter</a>
+              <a href="{% url 'group_charter'%}" class="navbar-link" data-nav-link>Group charter</a>
             </li>
 
             <li>
