--- a/templates/index.html
+++ b/templates/index.html
@@ -215,7 +215,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="{% url 'about-us' %}" class="btn btn-primary">Learn more</a>
+            <a href="{% url 'about-us' %}" class="btn btn-primary">About us</a>
 
 
             <button id="bookNowButton" class="btn btn-primary">Book Now</button>
