--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
         <p class="about-banner-text">
           Since 2010, Nairobi Jet House has been redefining luxury air travel across Africa and beyond.
         </p>
-        <a href="{% url 'contact-us'%}" class="btn btn-primary">Contact us</a>
+        <a href="{% url 'contact-us'%}" class="btn btn-primary" style="display: inline-block; width: auto; padding: 12px 25px;">Contact us</a>
       </div>
     </div>
 
