--- a/templates/index.html
+++ b/templates/index.html
@@ -322,28 +322,28 @@
           <form action="" class="tour-search-form">
 
             <div class="input-wrapper">
-              <label for="destination" class="input-label">Search Destination*</label>
+              <label for="destination" class="input-label">Departure*</label>
 
-              <input type="text" name="destination" id="destination" required placeholder="Enter Destination"
+              <input type="text" name="departure" id="departure" required placeholder="Enter Departure"
                 class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="people" class="input-label">Pax Number*</label>
+              <label for="destination" class="input-label">Destination*</label>
 
-              <input type="number" name="people" id="people" required placeholder="No.of People" class="input-field">
+              <input type="text" name="destination" id="destination" required placeholder=" Destinantion" class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="checkin" class="input-label">Checkin Date**</label>
+              <label for="checkin" class="input-label">Passengers*</label>
 
-              <input type="date" name="checkin" id="checkin" required class="input-field">
+             <input type="number" name="people" id="people" required placeholder="No.of People" class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="checkout" class="input-label">Checkout Date*</label>
+              <label for="date" class="input-label">Date*</label>
 
-              <input type="date" name="checkout" id="checkout" required class="input-field">
+              <input type="date" name="date" id="date" required class="input-field">
             </div>
 
             <button type="submit" class="btn btn-secondary">Inquire now</button>
